# Duct-Design-App

./: .gitignore  AGENTS.md  README.md  app.py  check.py  pyproject.toml  requirements.txt
backend/canvas/: canvas_helpers.py
backend/ductcalc/: canvas.py  fitting_db.py  fittings.py  friction.py  models.py  system.py
backend/tests/: test_fittings.py  test_friction.py  test_system.py  test_velocity.py
