[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "duct-design-app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "streamlit-drawable-canvas",
    "pytest",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["backend"]